--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,46 +1,48 @@
-$base-color-red: #DC4752;
-$base-color-white: #E8F4E3;
-$base-color-aqua: #7AB7A8;
-$base-color-orange: #D49B6A;
-$base-color-dark: #3A3345;
-
-body {
-  background-color:#212426;
-  font-family: "Ubuntu Mono";
-  color:$base-color-white;
-}
-textarea
-{
-  resize:none;
-  border-radius: 2px;
-  transition: 2s;
-  border-width: 0px;
-}
-textarea:hover {
-  border-color:$base-color-aqua;
-}
-.divMsg
-{
-  background: $base-color-dark;
-  border:$base-color-white;
-  font-family: "Ubuntu Mono";
-  color:$base-color-white;
-  text-align: center;
-  border-radius: 3px;
-
-}
-.divsend{
-  color:$base-color-dark;
-  border:$base-color-orange;
-  font-family: "Ubuntu Mono";
-  color:$base-color-white;
-  text-align: center;
-  border-radius: 90px;
-  left:50%;
-}
-button{
-  width: 170px;
-  height: 33px;
-  border-radius: 90px;
-  border-color:white;
-}
+//$base-color-red: #DC4752;
+//$base-color-white: #E8F4E3;
+//$base-color-aqua: #7AB7A8;
+//$base-color-orange: #D49B6A;
+//$base-color-dark: #3A3345;
+//
+//body {
+//  background-color:#212426;
+//  font-family: "Ubuntu Mono";
+//  color:$base-color-white;
+//}
+//textarea
+//{
+//  resize:none;
+//  border-radius: 2px;
+//  transition: 2s;
+//  border-width: 0px;
+//  width: 170px;
+//  height: 33px;
+//}
+//textarea:hover {
+//  border-color:$base-color-aqua;
+//}
+//.divMsg
+//{
+//  background: $base-color-dark;
+//  border:$base-color-white;
+//  font-family: "Ubuntu Mono";
+//  color:$base-color-white;
+//  text-align: center;
+//  border-radius: 3px;
+//
+//}
+//.divsend{
+//  color:$base-color-dark;
+//  border:$base-color-orange;
+//  font-family: "Ubuntu Mono";
+//  color:$base-color-white;
+//  text-align: center;
+//  border-radius: 90px;
+//  left:50%;
+//}
+//button{
+//  width: 170px;
+//  height: 33px;
+//  border-radius: 90px;
+//  border-color:white;
+//}
