--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,72 @@
+body {
+  background-color: #303030;
+  font-family: "Ubuntu Mono";
+  background-image: url("pexels-roberto-nickson-2478248.jpg");
+  color: #E8F4E3;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+}
 
+textarea {
+  resize: none;
+  border-radius: 2px;
+  transition: 2s;
+  border-width: 0px;
+  width: 170px;
+  height: 33px;
+}
+
+textarea:hover {
+  border-color: #7AB7A8;
+}
+
+.divMsg {
+  background: #232323;
+  border: #E8F4E3;
+  font-family: "Ubuntu Mono";
+  color: white;
+  text-align: center;
+  border-radius: 20px;
+  text-shadow: #E91E63 0px 0px 20px;
+  transition-duration: 1s;
+  box-shadow: #3A3345 2px 2px 2px;
+  opacity: 80%;
+}
+
+.divMsg:hover {
+  text-shadow: #ff7dab 2px 2px 20px;
+  animation-name: example;
+  animation-duration: 1s;
+}
+
+@keyframes example {
+  0% {
+    text-shadow: #E91E63 0px 0px 20px;
+  }
+  25% {
+    text-shadow: #ff5c93 0px 0px 20px;
+  }
+  50% {
+    text-shadow: #ff7ca7 0px 0px 20px;
+  }
+  100% {
+    text-shadow: #ffacca 0px 0px 20px;
+  }
+}
+.divsend {
+  color: #3A3345;
+  border: #D49B6A;
+  font-family: "Ubuntu Mono";
+  color: #E8F4E3;
+  text-align: center;
+  border-radius: 90px;
+  left: 50%;
+}
+
+button {
+  width: 210px;
+  height: 210px;
+}
 
 /*# sourceMappingURL=app.component.css.map */
