--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@ $base-color-dark: #3A3345;
 body {
   background-color:#303030;
   font-family: "Ubuntu Mono";
-  background-image: url("pexels-roberto-nickson-2478248.jpg");
+  background-image: url("pexels-pixabay-316093.jpg");
   color:$base-color-white;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -30,6 +30,7 @@ textarea:hover {
   border-color:$base-color-aqua;
 }
 .divMsg {
+  margin-top: 30px;
   background: #3d3d3d;
   border: $base-color-white;
   font-family: "Ubuntu Mono";
