--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,8 +5,7 @@ body {
   color: #E8F4E3;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100% auto;
-  background-size: 100% 100%;
+  background-size: auto auto;
   background-position: center, center;
 }
 
