--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,8 +11,7 @@ body {
   color:$base-color-white;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100% auto;
-  background-size:100% 100%;
+  background-size: auto auto;
   background-position: center, center;
 
 
