--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@ textarea {
   resize: none;
   border-radius: 2px;
   transition: 2s;
-  border-width: 0px;
+  border-width: 0;
   width: 170px;
   height: 33px;
 }
